online-editor/v1/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flask-app-service
spec:
  selector:
    app: python-flask-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
  type: LoadBalancer
  sessionAffinity: ClientIP
