online-editor/v1/deployment/deny-egress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress
spec:
  podSelector:
    matchLabels:
      app: python-flask-app
  policyTypes:
  - Egress
  egress: []
